# hegemony-demo-data

./: .commitlintrc.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSING.md  README.md  REUSE.toml  Taskfile.yml  install.sh  manifest.yaml  pyproject.toml
.github/: zizmor.yml
.github/workflows/: check.yml  release.yml
demo-inventory/devices/: br1-acc-01.yaml  br1-edge-01.yaml  br1-srv-01.yaml  br2-acc-01.yaml  br2-edge-01.yaml  br2-srv-01.yaml  dc1-acc-01.yaml  dc1-acc-02.yaml  dc1-core-01.yaml  dc1-core-02.yaml  dc1-srv-01.yaml  dc2-acc-01.yaml  dc2-core-01.yaml  dc2-core-02.yaml  dc2-srv-01.yaml  lab-r1.yaml  lab-r2.yaml  lab-r3.yaml  lab-r4.yaml
docs/: release.md  structure.md  walkthrough.md
scripts/: build.py  checksums.py  validate.py
src/bundles/: 00-organization.yaml  05-variables.yaml  10-inventory.yaml  10-secrets.yaml  15-inventory.yaml  15-secrets.yaml  17-inventory-providers.yaml  18-git-repositories.yaml  25-flows.yaml  (+11 more)
src/bundles-acme/: 00-organization.yaml  05-variables.yaml  10-secrets.yaml  15-inventory.yaml  30-flows.yaml  40-notifications.yaml
src/bundles-globex/: 00-organization.yaml  05-variables.yaml  10-secrets.yaml  15-inventory.yaml  30-flows.yaml  40-notifications.yaml
src/bundles-meridian-inventory/: 00-organization.yaml  10-git-repositories.yaml
src/bundles-organizations/: 00-organizations.yaml  50-permission-overrides.yaml
src/bundles-shared/: 00-organization.yaml  05-variables.yaml  10-secrets.yaml  20-file-repositories.yaml  30-flows.yaml  40-notifications.yaml
tests/: test_validate.py
(+32 files in other folders)
